frame/support/test/tests/pallet_ui/event_type_invalid_bound.stderr
error: Invalid `type RuntimeEvent`, associated type `RuntimeEvent` is reserved and must bound: `IsType<<Self as frame_system::Config>::RuntimeEvent>`
 --> $DIR/event_type_invalid_bound.rs:9:3
  |
9 |         type RuntimeEvent;
  |         ^^^^
